# test_fribidi

./: CMakeLists.txt  README.md  build_run.sh  main.cpp
